# nrf_cloud_coap

./: CMakeLists.txt  Kconfig  prj.conf
src/: cloud.h  cloud_coap.c  main.c
